--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@ html {
     *, *::before, *::after {
         animation-duration: 0.001ms !important;
         animation-iteration-count: 1 !important;
-        transition-duration: 0.001ms !important;';'
+        transition-duration: 0.001ms !important;
     }
 }
 
